# search_engine

./: Cargo.toml  README.md
src/: main.rs
web/: index.html  search.css  search.html
web/js/: remote.js  typeahead.bundle.js
